// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the file type is markdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 1rem;
  line-height: 1rem;
}

<div
    class="fui-MenuPopover ___1gc0quk_1jdftlb ft85np5 fxugw4r f19n0e5 f1ewtqcl fl8fusi f1kaai3v f1p9o1ba f1ahpp82 f1hg901r fd3pd8h f9ggezi fk6fouc fkhj508 figsok6 f1i3iumi f18k4bn6 fo1kyvf fetxo7e f8x1vz1 f8g0anz fezwn9i fz5efge f1ydixl4 f8dgqj5 fnyfnr8 fgw77r4 f1noc5he f1k46bua f1lhuzxm f1f9qikc"
    data-tabster="{"restorer":{"type":0}}"
    role="presentation"
  >
    <div
      aria-labelledby="menu_r_1_"
      class="fui-MenuList ___1cyqkw0_k0y38j0 f22iagw f1vx9l62 f1t6b6ee f1l02sjl"
      data-tabster="{"mover":{"cyclic":true,"direction":1,"memorizeCurrent":true}}"
      role="menu"
    >
      <div
        aria-labelledby="menu-group_r_2_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 4.09v6.41A2.5 2.5 0 0 0 6.34 13h4.57c-.2.58-.76 1-1.41 1H6a3 3 0 0 1-3-3V5.5c0-.65.42-1.2 1-1.41ZM11.5 2c.83 0 1.5.67 1.5 1.5v7c0 .83-.67 1.5-1.5 1.5h-5A1.5 1.5 0 0 1 5 10.5v-7C5 2.67 5.67 2 6.5 2h5Zm0 1h-5a.5.5 0 0 0-.5.5v7c0 .28.22.5.5.5h5a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.5-.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Copy file
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.5 4h1a3.5 3.5 0 0 1 .2 7H9.5a.5.5 0 0 1-.1-.99h.1l1-.01a2.5 2.5 0 0 0 .16-5H9.5a.5.5 0 0 1-.09-1h1.09-1Zm-4 0h1a.5.5 0 0 1 .09 1H5.5a2.5 2.5 0 0 0-.16 5H6.5a.5.5 0 0 1 .09 1H5.5a3.5 3.5 0 0 1-.2-7h1.2-1Zm0 3h5a.5.5 0 0 1 .09 1H5.5a.5.5 0 0 1-.09-1h.09Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Copy link
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_3_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon emotion-0 ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 2a.5.5 0 0 0 0 1h1v10h-1a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-1V3h1a.5.5 0 0 0 0-1h-3ZM4 4h2.5v1H4a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h2.5v1H4a2 2 0 0 1-2-2V6c0-1.1.9-2 2-2Zm8 7H9.5v1H12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H9.5v1H12a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Rename file
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 3h2a1 1 0 0 0-2 0ZM6 3a2 2 0 1 1 4 0h4a.5.5 0 0 1 0 1h-.56l-1.2 8.84A2.5 2.5 0 0 1 9.74 15h-3.5a2.5 2.5 0 0 1-2.48-2.16L2.57 4H2a.5.5 0 0 1 0-1h4Zm1 3.5a.5.5 0 0 0-1 0v5a.5.5 0 0 0 1 0v-5ZM9.5 6c.28 0 .5.22.5.5v5a.5.5 0 0 1-1 0v-5c0-.28.22-.5.5-.5Zm-4.74 6.7c.1.75.74 1.3 1.49 1.3h3.5a1.5 1.5 0 0 0 1.5-1.3L12.42 4H3.57l1.19 8.7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Delete file
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_4_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 13h9a.5.5 0 0 1 .09 1H3.5a.5.5 0 0 1-.09-1h9.09-9ZM7.91 1H8a.5.5 0 0 1 .5.41v8.89l2.68-2.69a.5.5 0 0 1 .64-.06l.07.06c.17.17.2.44.06.64l-.06.07-3.54 3.53a.5.5 0 0 1-.63.06l-.07-.06L4.1 8.32a.5.5 0 0 1 .64-.77l.07.06L7.5 10.3V1.5a.5.5 0 0 1 .41-.5H8h-.09Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Download
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_5_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              class="emotion-0"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.6924215,13.986674 C22.9997233,14.1908343 24,15.3216239 24,16.6862741 C24,17.7522298 23.3892094,18.6751163 22.4988002,19.1254521 C22.4321553,19.1592575 22.3639409,19.1904067 22.294157,19.2186583 L8.59404885,19.2186583 L8.59404885,19.2181754 C6.85476268,19.2073094 5.44797646,17.7943658 5.44797646,16.0524235 C5.44797646,14.3037201 6.86550796,12.8860679 8.61421133,12.8860679 C8.70222602,12.8860679 8.78903338,12.8906557 8.87511633,12.8976583 C8.87028699,12.8172498 8.86702719,12.7364791 8.86702719,12.6548633 C8.86702719,10.4662072 10.6413261,8.69190834 12.8299821,8.69190834 C14.3676434,8.69190834 15.6998164,9.5683125 16.3568479,10.8482079 C16.9002691,10.4918027 17.5498151,10.283779 18.2483789,10.283779 C20.1559675,10.283779 21.7023216,11.8301331 21.7023216,13.7377217 C21.7023216,13.8215107 21.6982167,13.9043338 21.6924215,13.986674 Z M8.18741857,12.2086324 C6.25507961,12.421727 4.74711875,14.0641849 4.74711875,16.0524235 C4.74711875,16.8619413 4.9992102,17.6150766 5.42841764,18.2378198 L3.27887919,18.2378198 C1.46799809,18.2378198 -1.77635684e-15,16.7698217 -1.77635684e-15,14.9589406 C-1.77635684e-15,13.2281057 1.34134869,11.8115401 3.04103428,11.6894786 C2.98428956,11.4324371 2.95350253,11.1656161 2.95350253,10.8915512 C2.95350253,8.85248384 4.60646427,7.19964283 6.64541087,7.19964283 C7.40977438,7.19964283 8.11980783,7.43181327 8.70886636,7.82963 C9.54542848,6.15252157 11.276867,5 13.2783862,5 C15.9223281,5 18.0967377,7.01021204 18.3569183,9.58557738 C18.3206982,9.58461151 18.2847197,9.58292125 18.2483789,9.58292125 C17.6798451,9.58292125 17.1232638,9.6982217 16.6079734,9.92012979 C15.7386926,8.71545137 14.3462736,7.99105063 12.8299821,7.99105063 C10.4089142,7.99105063 8.41282793,9.84563725 8.18741857,12.2086324 Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Open with OneDrive
          </span>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
  />
  <div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <span
      hidden=""
    />
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the file type is not markdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 1rem;
  line-height: 1rem;
}

<div
    class="fui-MenuPopover ___1gc0quk_1jdftlb ft85np5 fxugw4r f19n0e5 f1ewtqcl fl8fusi f1kaai3v f1p9o1ba f1ahpp82 f1hg901r fd3pd8h f9ggezi fk6fouc fkhj508 figsok6 f1i3iumi f18k4bn6 fo1kyvf fetxo7e f8x1vz1 f8g0anz fezwn9i fz5efge f1ydixl4 f8dgqj5 fnyfnr8 fgw77r4 f1noc5he f1k46bua f1lhuzxm f1f9qikc"
    data-tabster="{"restorer":{"type":0}}"
    role="presentation"
  >
    <div
      aria-labelledby="menu_r_7_"
      class="fui-MenuList ___1cyqkw0_k0y38j0 f22iagw f1vx9l62 f1t6b6ee f1l02sjl"
      data-tabster="{"mover":{"cyclic":true,"direction":1,"memorizeCurrent":true}}"
      role="menu"
    >
      <div
        aria-labelledby="menu-group_r_8_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.5 4h1a3.5 3.5 0 0 1 .2 7H9.5a.5.5 0 0 1-.1-.99h.1l1-.01a2.5 2.5 0 0 0 .16-5H9.5a.5.5 0 0 1-.09-1h1.09-1Zm-4 0h1a.5.5 0 0 1 .09 1H5.5a2.5 2.5 0 0 0-.16 5H6.5a.5.5 0 0 1 .09 1H5.5a3.5 3.5 0 0 1-.2-7h1.2-1Zm0 3h5a.5.5 0 0 1 .09 1H5.5a.5.5 0 0 1-.09-1h.09Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Copy link
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_9_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 13h9a.5.5 0 0 1 .09 1H3.5a.5.5 0 0 1-.09-1h9.09-9ZM7.91 1H8a.5.5 0 0 1 .5.41v8.89l2.68-2.69a.5.5 0 0 1 .64-.06l.07.06c.17.17.2.44.06.64l-.06.07-3.54 3.53a.5.5 0 0 1-.63.06l-.07-.06L4.1 8.32a.5.5 0 0 1 .64-.77l.07.06L7.5 10.3V1.5a.5.5 0 0 1 .41-.5H8h-.09Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Download
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_a_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              class="emotion-0"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.6924215,13.986674 C22.9997233,14.1908343 24,15.3216239 24,16.6862741 C24,17.7522298 23.3892094,18.6751163 22.4988002,19.1254521 C22.4321553,19.1592575 22.3639409,19.1904067 22.294157,19.2186583 L8.59404885,19.2186583 L8.59404885,19.2181754 C6.85476268,19.2073094 5.44797646,17.7943658 5.44797646,16.0524235 C5.44797646,14.3037201 6.86550796,12.8860679 8.61421133,12.8860679 C8.70222602,12.8860679 8.78903338,12.8906557 8.87511633,12.8976583 C8.87028699,12.8172498 8.86702719,12.7364791 8.86702719,12.6548633 C8.86702719,10.4662072 10.6413261,8.69190834 12.8299821,8.69190834 C14.3676434,8.69190834 15.6998164,9.5683125 16.3568479,10.8482079 C16.9002691,10.4918027 17.5498151,10.283779 18.2483789,10.283779 C20.1559675,10.283779 21.7023216,11.8301331 21.7023216,13.7377217 C21.7023216,13.8215107 21.6982167,13.9043338 21.6924215,13.986674 Z M8.18741857,12.2086324 C6.25507961,12.421727 4.74711875,14.0641849 4.74711875,16.0524235 C4.74711875,16.8619413 4.9992102,17.6150766 5.42841764,18.2378198 L3.27887919,18.2378198 C1.46799809,18.2378198 -1.77635684e-15,16.7698217 -1.77635684e-15,14.9589406 C-1.77635684e-15,13.2281057 1.34134869,11.8115401 3.04103428,11.6894786 C2.98428956,11.4324371 2.95350253,11.1656161 2.95350253,10.8915512 C2.95350253,8.85248384 4.60646427,7.19964283 6.64541087,7.19964283 C7.40977438,7.19964283 8.11980783,7.43181327 8.70886636,7.82963 C9.54542848,6.15252157 11.276867,5 13.2783862,5 C15.9223281,5 18.0967377,7.01021204 18.3569183,9.58557738 C18.3206982,9.58461151 18.2847197,9.58292125 18.2483789,9.58292125 C17.6798451,9.58292125 17.1232638,9.6982217 16.6079734,9.92012979 C15.7386926,8.71545137 14.3462736,7.99105063 12.8299821,7.99105063 C10.4089142,7.99105063 8.41282793,9.84563725 8.18741857,12.2086324 Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Open with OneDrive
          </span>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
  />
  <div
    class="fui-FluentProvider fui-FluentProvider_r_6_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <span
      hidden=""
    />
  </div>
</DocumentFragment>
`;
